Added ProcessFunctions and EnvrFunctions modules.

--- a/BASIClib/Makefile.win32
+++ b/BASIClib/Makefile.win32
@@ -11,7 +11,8 @@ OBJS = BasicString.o ConversionFunctions.o Initialize.o OnEvents.o \
        StringFunctions.o LowLevelFunctions.o SignalHandlers.o \
        ConsoleFunctions.o PenFunctions.o ProcessFunctions.o \
        FileSystemFunctions.o Variant.o BasicError.o NoConsole.o \
-       DirectConsole.o RedirectedConsole.o CursesConsole.o
+       DirectConsole.o RedirectedConsole.o CursesConsole.o \
+       EnvrFunctions.o ProcessFunctions.o
 
 CC = gcc
 LINKER = gcc
@@ -109,6 +110,12 @@ Variant.o : Variant.c Variant.h Boolean.h
 
 BasicError.o : BasicError.c BasicError.h
 	$(CC) $(COPTIONS) BasicError.o BasicError.c
+
+EnvrFunctions.o : EnvrFunctions.c EnvrFunctions.h
+	$(CC) $(COPTIONS) EnvrFunctions.o EnvrFunctions.c
+
+ProcessFunctions.o : ProcessFunctions.c ProcessFunctions.h
+	$(CC) $(COPTIONS) ProcessFunctions.o ProcessFunctions.c
 
 # end of Makefile.win32 ...
 
