--- a/BASIClib/Makefile.win32
+++ b/BASIClib/Makefile.win32
@@ -6,7 +6,7 @@ LIBBASE = libBASIC
 LIBWHOLE = $(LIBBASE)$(MAJORVER)$(MINORVER).a
 
 OBJS = BasicString.o ConversionFunctions.o Initialize.o OnEvents.o \
-       ErrorFunctions.o MathFunctions.o InternalMemManager.o Threads.o \
+       ErrorFunctions.o MathFunctions.o MemoryManager.o Threads.o \
        TimeDateFunctions.o FileIOFunctions.o BasicFileStream.o \
        StringFunctions.o LowLevelFunctions.o SignalHandlers.o \
        ConsoleFunctions.o PenFunctions.o ProcessFunctions.o \
@@ -46,7 +46,7 @@ ConversionFunctions.o : ConversionFunctions.c ConversionFunctions.h
 Initialize.o : Initialize.c Initialize.h
 	$(CC) $(COPTIONS) Initialize.o Initialize.c
 
-OnEvents.o : OnEvents.c OnEvents.h InternalMemManager.h
+OnEvents.o : OnEvents.c OnEvents.h
 	$(CC) $(COPTIONS) OnEvents.o OnEvents.c
 
 ErrorFunctions.o : ErrorFunctions.c ErrorFunctions.h
@@ -55,8 +55,8 @@ ErrorFunctions.o : ErrorFunctions.c ErrorFunctions.h
 MathFunctions.o : MathFunctions.c MathFunctions.h
 	$(CC) $(COPTIONS) MathFunctions.o MathFunctions.c
 
-InternalMemManager.o : InternalMemManager.c InternalMemManager.h
-	$(CC) $(COPTIONS) InternalMemManager.o InternalMemManager.c
+MemoryManager.o : MemoryManager.c MemoryManager.h
+	$(CC) $(COPTIONS) MemoryManager.o MemoryManager.c
 
 Threads.o : Threads.c Threads.h
 	$(CC) $(COPTIONS) Threads.o Threads.c
