--- a/tools/testlib/Makefile.linux
+++ b/tools/testlib/Makefile.linux
@@ -2,7 +2,8 @@
 
 # move this to root makefile. export it.
 OBJS = TestLib.o TestConversionFunctions.o TestOnEvents.o TestThreads.o \
-       TestErrorFunctions.o TestStringFunctions.o TestFileIOFunctions.o
+       TestErrorFunctions.o TestStringFunctions.o TestFileIOFunctions.o \
+       TestMathFunctions.o
 CC = gcc
 LINKER = gcc
 
@@ -11,7 +12,7 @@ LINKER = gcc
 #LOPTIONS = -Wall -L $(BASICLIBDIR) -lBASIC -lm -lpthread -s -O2 -o
 
 # Debug command lines...
-COPTIONS = -D_REENTRANT -DLANG_ENGLISH -DLINUX -Wall -fasm -finline-functions -I $(BASICLIBDIR) -DDEBUG -g -c -o
+COPTIONS = -D_REENTRANT -DLANG_ENGLISH -DLINUXELF_I386 -Wall -fasm -finline-functions -I $(BASICLIBDIR) -DDEBUG -g -c -o
 LOPTIONS = -Wall -L $(BASICLIBDIR) -lBASIC -lm -lpthread -lncurses -g -o
 
 all : linux
@@ -56,5 +57,8 @@ TestFileIOFunctions.o : TestFileIOFunctions.c $(BASICLIBDIR)/Initialize.h \
                             $(BASICLIBDIR)/FileIOFunctions.h \
                             $(BASICLIBDIR)/Boolean.h 
 	$(CC) $(COPTIONS) TestFileIOFunctions.o TestFileIOFunctions.c
+
+TestMathFunctions.o : TestMathFunctions.c $(BASICLIBDIR)/MathFunctions.h
+	$(CC) $(COPTIONS) TestMathFunctions.o TestMathFunctions.c
 
 # end of Makefile.linux ...
