--- a/BASIClib/Makefile.linux
+++ b/BASIClib/Makefile.linux
@@ -1,4 +1,6 @@
 # Makefile for building a dynamic (shared) BASIClib
+#
+#  Copyright (c) 1999 Ryan C. Gordon and Gregory S. Read.
 
 DYNLIBBASE = libBASIC.so
 DYNLIBWHOLE = $(DYNLIBBASE).$(WHOLEVERSION)
