Patched and updated while debugging BASIClib. No more STATEPARAMS, and new OnError subsystem has also been put into place. STANDALONE section SHOULD be accurate, now. Other little stuff.

--- a/tools/testlib/Makefile.linux
+++ b/tools/testlib/Makefile.linux
@@ -1,7 +1,7 @@
 # Makefile for building a dynamic (shared) BASIClib
 
 # move this to root makefile. export it.
-OBJS = TestLib.o TestConversionFunctions.o TestOnEvents.o TestThreads.o \
+OBJS = TestLib.o TestConversionFunctions.o TestOnError.o TestThreads.o \
        TestErrorFunctions.o TestStringFunctions.o TestFileIOFunctions.o \
        TestMathFunctions.o
 CC = gcc
@@ -12,8 +12,8 @@ LINKER = gcc
 #LOPTIONS = -Wall -L $(BASICLIBDIR) -lBASIC -lm -lpthread -s -O2 -o
 
 # Debug command lines...
-COPTIONS = -D_REENTRANT -DLANG_ENGLISH -DLINUXELF_I386 -Wall -fasm -finline-functions -I $(BASICLIBDIR) -DDEBUG -g -c -o
-LOPTIONS = -Wall -L $(BASICLIBDIR) -lBASIC -lm -lpthread -lncurses -g -o
+COPTIONS = -D_REENTRANT -DLANG_ENGLISH -DLINUXELF_I386 -Wall -fasm -finline-functions -fno-omit-frame-pointer -I $(BASICLIBDIR) -DDEBUG -g -c -o
+LOPTIONS = -Wall -L $(BASICLIBDIR) -lBASIC -lm -lpthread -lncurses -o
 
 all : linux
 
@@ -25,40 +25,25 @@ testlib : $(OBJS)
 TestLib.o : TestLib.c TestLib.h
 	$(CC) $(COPTIONS) TestLib.o TestLib.c
 
-TestOnEvents.o : TestOnEvents.c $(BASICLIBDIR)/OnEvents.h \
-                 $(BASICLIBDIR)/Boolean.h $(BASICLIBDIR)/Threads.h \
-                 $(BASICLIBDIR)/ErrorFunctions.h
-	$(CC) $(COPTIONS) TestOnEvents.o TestOnEvents.c
+TestOnError.o : TestOnError.c
+	$(CC) $(COPTIONS) TestOnError.o TestOnError.c
 
-TestThreads.o : TestThreads.c \
-                $(BASICLIBDIR)/Boolean.h \
-                $(BASICLIBDIR)/Threads.h 
+TestThreads.o : TestThreads.c
 	$(CC) $(COPTIONS) TestThreads.o TestThreads.c
 
-TestConversionFunctions.o : TestConversionFunctions.c \
-                            $(BASICLIBDIR)/BasicString.h \
-                            $(BASICLIBDIR)/ConversionFunctions.h 
+TestConversionFunctions.o : TestConversionFunctions.c
 	$(CC) $(COPTIONS) TestConversionFunctions.o TestConversionFunctions.c
 
-TestErrorFunctions.o : TestErrorFunctions.c \
-                            $(BASICLIBDIR)/Initialize.h \
-                            $(BASICLIBDIR)/OnEvents.h \
-                            $(BASICLIBDIR)/ErrorFunctions.h 
+TestErrorFunctions.o : TestErrorFunctions.c
 	$(CC) $(COPTIONS) TestErrorFunctions.o TestErrorFunctions.c
 
-TestStringFunctions.o : TestStringFunctions.c $(BASICLIBDIR)/Initialize.h \
-                            $(BASICLIBDIR)/BasicString.h \
-                            $(BASICLIBDIR)/StringFunctions.h \
-                            $(BASICLIBDIR)/Boolean.h
+TestStringFunctions.o : TestStringFunctions.c
 	$(CC) $(COPTIONS) TestStringFunctions.o TestStringFunctions.c
 
-TestFileIOFunctions.o : TestFileIOFunctions.c $(BASICLIBDIR)/Initialize.h \
-                            $(BASICLIBDIR)/BasicString.h \
-                            $(BASICLIBDIR)/FileIOFunctions.h \
-                            $(BASICLIBDIR)/Boolean.h 
+TestFileIOFunctions.o : TestFileIOFunctions.c
 	$(CC) $(COPTIONS) TestFileIOFunctions.o TestFileIOFunctions.c
 
-TestMathFunctions.o : TestMathFunctions.c $(BASICLIBDIR)/MathFunctions.h
+TestMathFunctions.o : TestMathFunctions.c
 	$(CC) $(COPTIONS) TestMathFunctions.o TestMathFunctions.c
 
 # end of Makefile.linux ...
