--- a/tools/testlib/Makefile.linux
+++ b/tools/testlib/Makefile.linux
@@ -12,6 +12,7 @@ LINKER = gcc
 #LOPTIONS = -Wall -L $(BASICLIBDIR) -lBASIC -lm -lpthread -s -O2 -o
 
 # Debug command lines...
+#COPTIONS = -DSINGLE_THREADED -DLANG_ENGLISH -DLINUXELF_I386 -Wall -fasm -finline-functions -fno-omit-frame-pointer -I $(BASICLIBDIR) -DDEBUG -g -c -o
 COPTIONS = -D_REENTRANT -DLANG_ENGLISH -DLINUXELF_I386 -Wall -fasm -finline-functions -fno-omit-frame-pointer -I $(BASICLIBDIR) -DDEBUG -g -c -o
 LOPTIONS = -Wall -L $(BASICLIBDIR) -lBASIC -lm -lpthread -lncurses -o
 
