--- a/BASIClib/Makefile.win32
+++ b/BASIClib/Makefile.win32
@@ -11,10 +11,9 @@ OBJS = BasicString.o ConversionFunctions.o Initialize.o \
        ErrorFunctions.o MathFunctions.o MemoryManager.o Threads.o \
        TimeDateFunctions.o FileIOFunctions.o BasicFileStream.o \
        StringFunctions.o LowLevelFunctions.o SignalHandlers.o \
-       ConsoleFunctions.o PenFunctions.o ProcessFunctions.o \
-       FileSystemFunctions.o Variant.o BasicError.o NoConsole.o \
-       DirectConsole.o RedirectedConsole.o CursesConsole.o \
-       EnvrFunctions.o Gosub.o MiscFunctions.o ArrayFunctions.o
+       ConsoleFunctions.o ProcessFunctions.o FileSystemFunctions.o \
+       Variant.o BasicError.o NoConsole.o DirectConsole.o RedirectedConsole.o \
+       CursesConsole.o EnvrFunctions.o Gosub.o MiscFunctions.o ArrayFunctions.o
 
 CC = gcc
 LINKER = gcc
@@ -100,9 +99,6 @@ RedirectedConsole.o : RedirectedConsole.c RedirectedConsole.h ConsoleFunctions.h
 
 CursesConsole.o : CursesConsole.c CursesConsole.h ConsoleFunctions.h
 	$(CC) $(COPTIONS) CursesConsole.o CursesConsole.c
-
-PenFunctions.o : PenFunctions.c PenFunctions.h
-	$(CC) $(COPTIONS) PenFunctions.o PenFunctions.c
 
 ProcessFunctions.o : ProcessFunctions.c ProcessFunctions.h
 	$(CC) $(COPTIONS) ProcessFunctions.o ProcessFunctions.c
