--- a/tools/testlib/Makefile.linux
+++ b/tools/testlib/Makefile.linux
@@ -2,20 +2,18 @@
 
 # move this to root makefile. export it.
 OBJS = TestLib.o TestConversionFunctions.o TestOnError.o TestThreads.o \
-       TestErrorFunctions.o TestStringFunctions.o TestFileIOFunctions.o \
-       TestMathFunctions.o
+       TestErrorFunctions.o TestStringFunctions.o TestMathFunctions.o \
+       TestGarbageCollector.o
 CC = gcc
 LINKER = gcc
 
 # Shipping command lines
 #COPTIONS = -D_REENTRANT -DLANG_ENGLISH -DLINUX -Wall -fasm -finline-functions -I $(BASICLIBDIR) -s -O2 -c -o
-#LOPTIONS = -Wall -L $(BASICLIBDIR) -lBASIC -lm -lpthread -s -O2 -o
+#LOPTIONS = -Wall -L $(GCLIBDIR) -L $(BASICLIBDIR) -lpthread -lgc -lBASIC -lm -lpthread -s -O2 -o
 
 # Debug command lines...
-COPTIONS = -DSINGLE_THREADED -D_REENTRANT -DLANG_ENGLISH -DLINUXELF_I386 -Wall -fasm -finline-functions -fno-omit-frame-pointer -I $(BASICLIBDIR) -DDEBUG -g -c -o
-LOPTIONS = -Wall -L $(BASICLIBDIR) -lBASIC -lm -lncurses -o
-#COPTIONS = -D_REENTRANT -DLANG_ENGLISH -DLINUXELF_I386 -Wall -fasm -finline-functions -fno-omit-frame-pointer -I $(BASICLIBDIR) -DDEBUG -g -c -o
-#LOPTIONS = -Wall -L $(BASICLIBDIR) -lBASIC -lm -lpthread -lncurses -o
+COPTIONS = -DSINGLE_THREADED -D_REENTRANT -DLINUX_THREADS -DLANG_ENGLISH -DLINUXELF_I386 -Wall -fasm -finline-functions -fno-omit-frame-pointer -I $(BASICLIBDIR) -DDEBUG -g -c -o
+LOPTIONS = -Wall -L $(GCLIBDIR) -L $(BASICLIBDIR) -lpthread -lgc -lBASIC -lm -lncurses -o
 
 all : linux
 
@@ -24,8 +22,8 @@ linux : testlib testconsole
 testlib : $(OBJS)
 	$(LINKER) $(LOPTIONS) testlib $(OBJS)
 
-TestLib.o : TestLib.cc TestLib.h
-	$(CC) $(COPTIONS) TestLib.o TestLib.cc
+TestLib.o : TestLib.c TestLib.h
+	$(CC) $(COPTIONS) TestLib.o TestLib.c
 
 TestOnError.o : TestOnError.c
 	$(CC) $(COPTIONS) TestOnError.o TestOnError.c
@@ -47,6 +45,9 @@ TestFileIOFunctions.o : TestFileIOFunctions.c
 
 TestMathFunctions.o : TestMathFunctions.c
 	$(CC) $(COPTIONS) TestMathFunctions.o TestMathFunctions.c
+
+TestGarbageCollector.o : TestGarbageCollector.c
+	$(CC) $(COPTIONS) TestGarbageCollector.o TestGarbageCollector.c
 
 
 testconsole : TestConsole.o
