--- a/BASIClib/Makefile.win32
+++ b/BASIClib/Makefile.win32
@@ -21,7 +21,7 @@ LANGUAGE = ENGLISH
 
 # Debug command lines...
 DEFINES = -D_REENTRANT -DLANG_$(LANGUAGE) -DWIN32_I386 -DDEBUG
-COPTIONS = $(DEFINES) -Wall -fasm -finline-functions -g -c -o
+COPTIONS = -I../libgc $(DEFINES) -Wall -fasm -finline-functions -g -c -o
 LOPTIONS = $(DEFINES) -static -Wall -g -o
 ASMOPTIONS = $(DEFINES) -Wall -c -o
 
