--- a/BASIClib/Makefile.linux
+++ b/BASIClib/Makefile.linux
@@ -123,5 +123,8 @@ GUIFrontEnd.o : GUIFrontEnd.c GUIFrontEnd.h
 RegistryFunctions.o : RegistryFunctions.c RegistryFunctions.h
 	$(CC) $(COPTIONS) RegistryFunctions.o RegistryFunctions.c
 
+BasicFileSystem.o : BasicFileSystem.c BasicFileSystem.h
+	$(CC) $(COPTIONS) BasicFileSystem.o BasicFileSystem.c
+
 # end of Makefile.linux ...
 
