--- a/tools/testlib/Makefile.linux
+++ b/tools/testlib/Makefile.linux
@@ -1,9 +1,5 @@
 # Makefile for building a dynamic (shared) BASIClib
 
-# move this to root makefile. export it.
-OBJS = TestLib.o TestConversionFunctions.o TestOnError.o TestThreads.o \
-       TestErrorFunctions.o TestStringFunctions.o TestMathFunctions.o \
-       TestGarbageCollector.o TestFileSystemFunctions.o
 CC = gcc
 LINKER = gcc
 
@@ -12,6 +8,7 @@ LINKER = gcc
 #LOPTIONS = -Wall -L $(GCLIBDIR) -L $(BASICLIBDIR) -lpthread -lgc -lBASIC -lm -lpthread -s -O2 -o
 
 # Debug command lines...
+STANDALONECOPTIONS = -DSTANDALONE -DSINGLE_THREADED -D_REENTRANT -DLINUX_THREADS -DLANG_ENGLISH -DLINUXELF_I386 -Wall -fasm -finline-functions -fno-omit-frame-pointer -I $(BASICLIBDIR) -DDEBUG -g -L $(GCLIBDIR) -L $(BASICLIBDIR) -lpthread -lgc -lBASIC -lm -lncurses -o
 COPTIONS = -DSINGLE_THREADED -D_REENTRANT -DLINUX_THREADS -DLANG_ENGLISH -DLINUXELF_I386 -Wall -fasm -finline-functions -fno-omit-frame-pointer -I $(BASICLIBDIR) -DDEBUG -g -c -o
 LOPTIONS = -Wall -L $(GCLIBDIR) -L $(BASICLIBDIR) -lpthread -lgc -lBASIC -lm -lncurses -o
 
@@ -58,5 +55,31 @@ testconsole : TestConsole.o
 
 TestConsole.o : TestConsole.c
 	$(CC) $(COPTIONS) TestConsole.o TestConsole.c
+
+standalone : $(EXES)
+
+testconversionfunctions : TestConversionFunctions.c
+	$(CC) $(STANDALONECOPTIONS) testconversionfunctions TestConversionFunctions.c
+
+testonerror : TestOnError.c
+	$(CC) $(STANDALONECOPTIONS) testonerror TestOnError.c
+
+testthreads : TestThreads.c
+	$(CC) $(STANDALONECOPTIONS) testthreads TestThreads.c
+
+testerrorfunctions : TestErrorFunctions.c
+	$(CC) $(STANDALONECOPTIONS) testerrorfunctions TestErrorFunctions.c
+
+teststringfunctions : TestStringFunctions.c
+	$(CC) $(STANDALONECOPTIONS) teststringfunctions TestStringFunctions.c
+
+testmathfunctions : TestMathFunctions.c
+	$(CC) $(STANDALONECOPTIONS) testmathfunctions TestMathFunctions.c
+
+testgarbagecollector : TestGarbageCollector.c
+	$(CC) $(STANDALONECOPTIONS) testgarbagecollector TestGarbageCollector.c
+
+testfilesystemfunctions : TestFileSystemFunctions.c
+	$(CC) $(STANDALONECOPTIONS) testfilesystemfunctions TestFileSystemFunctions.c
 
 # end of Makefile.linux ...
