--- a/tools/testlib/Makefile.win32
+++ b/tools/testlib/Makefile.win32
@@ -17,7 +17,7 @@ LOPTIONS = -Wall -L $(BASICLIBDIR) -lm -g -o
 #LOPTIONS = -Wall -L $(BASICLIBDIR) -lm -lncurses -g -o
 
 
-all : testlib.exe testconsole.exe
+all : testlib.exe testconsole.exe testsegfault.exe teststackoverflow.exe
 
 testlib.exe : $(OBJS) $(wildcard $(BASICLIBDIR)/*.o)
 	$(LINKER) $(LOPTIONS) testlib.exe $(OBJS) $(wildcard $(BASICLIBDIR)/*.o)
@@ -52,5 +52,19 @@ testconsole.exe : TestConsole.o
 
 TestConsole.o : TestConsole.c
 	$(CC) $(COPTIONS) TestConsole.o TestConsole.c
+
+testsegfault.exe : TestSegFault.o
+	$(LINKER) $(LOPTIONS) testsegfault.exe TestSegFault.o
+
+TestSegFault.o : TestSegFault.c
+	$(CC) $(COPTIONS) TestSegFault.o TestSegFault.c
+
+
+teststackoverflow.exe : TestStackOverflow.o
+	$(LINKER) $(LOPTIONS) teststackoverflow.exe TestStackOverflow.o
+
+TestStackOverflow.o : TestStackOverflow.c
+	$(CC) $(COPTIONS) TestStackOverflow.o TestStackOverflow.c
+
 
 # end of Makefile.win32 ...
