Cleans up the parser executable when 'make clean'

--- a/parser/Makefile
+++ b/parser/Makefile
@@ -31,3 +31,4 @@ clean:
 	rm BasicLexer.cpp BasicLexer.hpp
 	rm BasicParserTokenTypes.hpp BasicParserTokenTypes.txt
 	rm BasicTokenTypes.hpp BasicTokenTypes.txt
+	rm parser
