--- a/tools/testlib/Makefile.win32
+++ b/tools/testlib/Makefile.win32
@@ -8,11 +8,11 @@ CC = gcc
 LINKER = gcc
 
 # Shipping command lines
-#COPTIONS = -DWIN32_I386 -D_REENTRANT -DLANG_ENGLISH -Wall -fasm -finline-functions -I $(BASICLIBDIR) -s -O2 -c -o
+#COPTIONS = -DWIN32_I386 -D_REENTRANT -Wall -fasm -finline-functions -I $(BASICLIBDIR) -s -O2 -c -o
 #LOPTIONS = -Wall -L $(BASICLIBDIR) -lBASIC -lm -lncurses -lpthread -s -O2 -o
 
 # Debug command lines...
-COPTIONS = -DWIN32_I386 -DDEBUG -D_REENTRANT -DLANG_ENGLISH -Wall -fasm -finline-functions -I $(BASICLIBDIR) -g -c -o
+COPTIONS = -DWIN32_I386 -DDEBUG -D_REENTRANT -Wall -fasm -finline-functions -I $(BASICLIBDIR) -g -c -o
 LOPTIONS = -Wall -L $(BASICLIBDIR) -lm -g -o
 #LOPTIONS = -Wall -L $(BASICLIBDIR) -lm -lncurses -g -o
 
