--- a/BASIClib/Makefile.win32
+++ b/BASIClib/Makefile.win32
@@ -120,5 +120,8 @@ BasicFileSystem.o : BasicFileSystem.c BasicFileSystem.h
 Language.o : Language.c Language.h
 	$(CC) $(COPTIONS) Language.o Language.c
 
+DynamicLoader.o : DynamicLoader.c DynamicLoader.h
+	$(CC) $(COPTIONS) DynamicLoader.o DynamicLoader.c
+
 # end of Makefile.win32 ...
 
